Refactor layout structure: simplify app.vue, update image handling in Hero and Selayang components, and adjust VSCode settings; add Cloudinary support in nuxt.config.ts

--- a/content/guru/1.yusup.md
+++ b/content/guru/1.yusup.md
@@ -4,7 +4,7 @@ nama: "Yusup, S.Pd."
 ttl: "Cirebon, 1 Januari 1970"
 pendidikan: "S1 Basaha dan Sastra Indonesia"
 nip: "1234567890"
-foto: https://a.storyblok.com/f/255043/850x1135/2a74b14326/yusup.jpg
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729922749/guru/yusup.jpg
 description: "SDN Teja 2, tempat di mana belajar dan tumbuh bersama menjadi pengalaman yang berharga."
 jabatan: "Kepala Sekolah"
 facebook: "#"
