Update guru profiles: replace image URLs with Cloudinary links, add new profile for Putriana Indrawati, and remove unused profile for Aldi Purnama; adjust layout styles in Visi component and remove Profil component

--- a/content/guru/2.iis.md
+++ b/content/guru/2.iis.md
@@ -3,7 +3,7 @@ title: "Hj. Iis Kartini"
 nama: "Hj. Iis Kartini, S.Pd."
 ttl: "Cirebon, 1 Januari 1970"
 pendidikan: "S1 Matesmatika"
-foto: https://a.storyblok.com/f/255043/850x1137/d265054e83/iis.jpg
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924570/guru/1iissquare.jpg
 description: "Di SDN Teja 2, kami bukan hanya sekadar mengajar, tapi juga membentuk karakter untuk masa depan yang cerah."
 jabatan: "Bendahara & Wali Kelas 1"
 nip: "1234567890"
