--- a/content/guru/3.haris.md
+++ b/content/guru/3.haris.md
@@ -3,7 +3,7 @@ title: "Haris Sunardi"
 nama: "Haris Sunardi, S.Pd."
 ttl: "Cirebon, 1 Januari 1970"
 pendidikan: "S1 PGSD"
-foto: https://a.storyblok.com/f/255043/1120x1600/e64f25baa2/whatsapp-image-2024-02-28-at-11-22-33.jpeg
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924571/guru/1harissquare.jpg
 description: "SDN Teja 2, di mana keceriaan belajar selalu hadir setiap hari."
 jabatan: "Wali Kelas 6"
 nip: "1234567890"
