--- a/content/guru/4.retno.md
+++ b/content/guru/4.retno.md
@@ -3,7 +3,7 @@ title: "Retno Wulandari"
 nama: "Retno Wulandari, S.Pd."
 ttl: "Cirebon, 1 Januari 1970"
 pendidikan: "S1 PGSD"
-foto: https://a.storyblok.com/f/255043/567x755/5f49ac8f9a/retno.jpg
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924574/guru/1retnosquare.jpg
 description: "SDN Teja 2, tempat di mana pengetahuan bertemu kebaikan dalam setiap langkah pendidikan."
 jabatan: "Wali Kelas 2"
 nip: "1234567890"
