--- a/content/guru/5.maspupah.md
+++ b/content/guru/5.maspupah.md
@@ -3,7 +3,7 @@ title: "Maspupah"
 nama: "Maspupah, S.Pd."
 ttl: "Cirebon, 1 Januari 1970"
 pendidikan: "S1 PGSD"
-foto: https://a.storyblok.com/f/255043/1066x1600/7858148131/maspupah.jpeg
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924571/guru/1pupahsquare.jpg
 description: "SDN Teja 2 sebagai tempat yang penuh semangat untuk tumbuh dan berkembang."
 jabatan: "Wali Kelas 4"
 nip: "1234567890"
