--- a/content/guru/6.didi.md
+++ b/content/guru/6.didi.md
@@ -3,7 +3,7 @@ title: "Didi Rukmayadi"
 nama: "Didi Rukmayadi, S.Pd."
 ttl: "Cirebon, 1 Januari 1970"
 pendidikan: "S1 PJOK"
-foto: https://a.storyblok.com/f/255043/850x1134/2cedc5f5d2/didi.jpg
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924575/guru/1didisquare.jpg
 description: "Setiap hari di SDN Teja 2 adalah kesempatan baru untuk belajar, berkembang, dan bersinar bersama."
 jabatan: "Guru PJOK"
 nip: "1234567890"
