--- a/content/guru/8.yana.md
+++ b/content/guru/8.yana.md
@@ -3,7 +3,7 @@ title: "Yana Mulyana"
 nama: "Yana Mulyana, S.Pd."
 ttl: "Cirebon, 1 Januari 1970"
 pendidikan: "S1 Bahasa dan Sastra Indonesia"
-foto: https://a.storyblok.com/f/255043/443x564/28b2d5c010/yana.png
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924577/guru/1yanasquare.jpg
 description: "TSDN Teja 2, sekolah yang menciptakan fondasi kuat untuk masa depan cerah anak-anak."
 jabatan: "Wali Kelas 3"
 nip: "1234567890"
