--- a/content/guru/9.putri.md
+++ b/content/guru/9.putri.md
@@ -1,11 +1,11 @@
 ---
-title: "Aldi Purnama"
-nama: "Aldi Purnama"
+title: "Putriana Indrawati"
+nama: "Putriana Indrawati"
 ttl: "Cirebon, 1 Januari 1970"
-pendidikan: "SMA (masih berkuliah)"
-foto: https://a.storyblok.com/f/255043/1450x2174/4036aee826/aldi.jpg
+pendidikan: "S1"
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924570/guru/1putrisquare.jpg
 description: "SDN Teja 2, kombinasi yang luar biasa untuk meraih prestasi dan kebahagiaan."
-jabatan: "Tenaga Pendidik"
+jabatan: "Guru PAI"
 nip: "1234567890"
 facebook: "https://www.facebook.com"
 instagram: "https://www.instagram.com"
