Add Kegiatan and Galeri components: create KegiatanList and KegiatanListItem components, implement lite-youtube-embed plugin, and update styles; remove old Galeri components and related markdown files

--- a/content/6.kegiatan.md
+++ b/content/6.kegiatan.md
@@ -1,10 +1,10 @@
 ---
-title: "Galeri"
+title: "Kegiatan"
 date: 2020-01-01
 description: "Ini adalah halaman galeri"
 icon: "i-ph-image-duotone"
 layout: page
 ---
 
-::galeri-list{path="galeri"}
+::kegiatan-list{path="kegiatan"}
 ::
