7 changes by Nuxt Studio

--- a/content/2.guru.md
+++ b/content/2.guru.md
@@ -1,8 +1,8 @@
 ---
 title: Guru
-description: "Guru SDN Teja II"
+description: Guru SDN Teja II
 layout: page
-icon: "i-ph-chalkboard-teacher-duotone"
+icon: i-ph-chalkboard-teacher-duotone
 ---
 
 ::guru-list{path="guru"}
