--- a/content/7.tags.md
+++ b/content/7.tags.md
@@ -1,9 +1,9 @@
 ---
 title: Tags
-description: "Halaman Tags Semua konten website SDN Teja II"
+description: Halaman Tags Semua konten website SDN Teja II
 layout: page
 navigation: false
-icon: "i-ph-tag-simple-duotone"
+icon: i-ph-tag-simple-duotone
 ---
 
 ::tags-list-page{path="\_tags"}
