1 change by Nuxt Studio

--- a/content/guru/1.yusup.md
+++ b/content/guru/1.yusup.md
@@ -1,15 +1,15 @@
 ---
-title: "Yusup"
-nama: "Yusup, S.Pd."
-ttl: "Cirebon, 1 Januari 1970"
-pendidikan: "S1 Basaha dan Sastra Indonesia"
-nip: "1234567890"
+title: Yusup
+nama: Yusup, S.Pd.
+ttl: Cirebon, 1 Januari 1970
+pendidikan: S1 Basaha dan Sastra Indonesia
+nip: '1234567890'
 foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729922749/guru/yusup.jpg
-description: "SDN Teja 2, tempat di mana belajar dan tumbuh bersama menjadi pengalaman yang berharga."
-jabatan: "Kepala Sekolah"
-facebook: "#"
-instagram: "https://www.instagram.com/yu.sup1432/"
-email: "#"
-layout: "guru"
-icon: "i-ph-chalkboard-teacher-duotone"
+description: SDN Teja 2, tempat di mana belajar dan tumbuh bersama menjadi pengalaman yang berharga.
+jabatan: Kepala Sekolah
+facebook: '#'
+instagram: https://www.instagram.com/yu.sup1432/
+email: '#'
+layout: guru
+icon: i-ph-chalkboard-teacher-duotone
 ---
