11 changes by Nuxt Studio

--- a/content/1.index.md
+++ b/content/1.index.md
@@ -8,9 +8,9 @@ layout: page
 
 ::hero
 ---
-title: SDN Teja II
 description: Wujudkan Impian Pendidikan Berkualitas untuk Semua, Lingkungan Belajar yang Nyaman, Kreatif, dan Menyenangkan
 image: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729926403/image/fotobersama_3x_mbgo9l.jpg
+title: SDN Teja II
 ---
 ::
 
@@ -19,12 +19,6 @@ image: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729926403/image/fotob
 
 ::selayang
 ---
-selayangPandang:
-  nama: Yusup, S.Pd.
-  jabatan: Kepala Sekolah
-  foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924575/guru/1yusupsquare.jpg
-  ucapan: Kehadiran website sekolah ini merupakan salah satu upaya kita untuk meningkatkan layanan informasi dan komunikasi sekolah kepada seluruh stakeholders, termasuk siswa, guru, karyawan, orang tua siswa, alumni, dan masyarakat umum.
-
 fasilitas:
   - label: Lab. Komputer
     src: https://res.cloudinary.com/dyy24w5kl/image/upload/v1730028447/fasilitas/fasilitas11_wpcnjv.jpg
@@ -32,7 +26,11 @@ fasilitas:
     src: https://res.cloudinary.com/dyy24w5kl/image/upload/v1730028445/fasilitas/fasilitas9_qvhuwb.jpg
   - label: Perpustakaan
     src: https://res.cloudinary.com/dyy24w5kl/image/upload/v1730028449/fasilitas/fasilitas5_ym5czu.jpg
-
+selayangPandang:
+  nama: Yusup, S.Pd.
+  jabatan: Kepala Sekolah
+  foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729924575/guru/1yusupsquare.jpg
+  ucapan: Kehadiran website sekolah ini merupakan salah satu upaya kita untuk meningkatkan layanan informasi dan komunikasi sekolah kepada seluruh stakeholders, termasuk siswa, guru, karyawan, orang tua siswa, alumni, dan masyarakat umum.
 ---
 ::
 
@@ -40,44 +38,44 @@ fasilitas:
 ---
 dataPrestasi:
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Cerdas Cermat'
+    lomba: Juara 1 Lomba Cerdas Cermat
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
   - tahun: '2021'
-    lomba: 'Juara 1 Lomba Mewarnai'
+    lomba: Juara 1 Lomba Mewarnai
     peringkat: '1'
-    siswa: 'Dinar, S.Pd.'
+    siswa: Dinar, S.Pd.
 ---
 ::
