2 changes by Nuxt Studio

--- a/content/guru/1.ely.md
+++ b/content/guru/1.ely.md
@@ -1,10 +1,10 @@
 ---
-title: Yusup
-nama: Yusup, S.Pd.
-ttl: Cirebon, 1 Januari 1970
-pendidikan: S1 Basaha dan Sastra Indonesia
+title: Ely
+nama: Ely Sri Kumalasari, S.Pd., M.Pd.
+ttl: Tempat, 18 November 1982
+pendidikan: S2
 nip: '1234567890'
-foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1729922749/guru/yusup.jpg
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1731310052/guru/elly.png
 description: SDN Teja 2, tempat di mana belajar dan tumbuh bersama menjadi pengalaman yang berharga.
 jabatan: Kepala Sekolah
 facebook: '#'
