--- a/content/guru/1.ely-sri-kumlasari.md
+++ b/content/guru/1.ely-sri-kumlasari.md
@@ -1,10 +1,10 @@
 ---
-title: Ely
+title: Ely Sri Kumalasari, S.Pd., M.Pd.
 nama: Ely Sri Kumalasari, S.Pd., M.Pd.
 ttl: Tempat, 18 November 1982
 pendidikan: S2
 nip: '1234567890'
-foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1731310052/guru/elly.png
+foto: https://res.cloudinary.com/dyy24w5kl/image/upload/v1731310482/guru/elysquare.png
 description: SDN Teja 2, tempat di mana belajar dan tumbuh bersama menjadi pengalaman yang berharga.
 jabatan: Kepala Sekolah
 facebook: '#'
